Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


TANGOAPI int TANGOCALL LSX_CreateLSID (int *plLSID);

TANGOAPI int TANGOCALL LSX_FreeLSID (int lLSID);

TANGOAPI int TANGOCALL LSX_ConnectSimple (int lLSID, int lAnInterfaceType, char *pcAComName, int lABaudRate, int lAShowProt);

TANGOAPI int TANGOCALL LSX_Disconnect (int lLSID);

TANGOAPI int TANGOCALL LSX_EnableCommandRetry (int lLSID, BOOL bAValue);

TANGOAPI int TANGOCALL LSX_SetPitch (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetActiveAxes (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_SetAccel (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetReduction (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_GetPos (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetStatus (int lLSID, char *pcStat, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetAbortFlag (int lLSID);

TANGOAPI int TANGOCALL LSX_SetMotorCurrent (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetShowProt (int lLSID, int lShowProt);

TANGOAPI int TANGOCALL LSX_SendString (int lLSID, char *pcStr, char *pcRet, int lMaxLen, BOOL bReadLine, int lTimeOut);

TANGOAPI int TANGOCALL LSX_SetAutoStatus (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetStatusAxis (int lLSID, char *pcStatusAxisStr, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetDimensions (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_SetGear (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_GetVersionStr (int lLSID, char *pcVers, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetError (int lLSID, int *plErrorCode);

TANGOAPI int TANGOCALL LSX_GetPosSingleAxis (int lLSID, int lAxis, double *pdPos);

TANGOAPI int TANGOCALL LSX_GetPosEx (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR, BOOL bEncoder);

TANGOAPI int TANGOCALL LSX_GetSerialNr (int lLSID, char *pcSerialNr, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetCalibOffset (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_SetAxisDirection (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_SetCalibrateDir (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_SetCurrentDelay (int lLSID, int lX, int lY, int lZ, int lR);

TANGOAPI int TANGOCALL LSX_SendStringPosCmd (int lLSID, char *pcStr, char *pcRet, int lMaxLen, BOOL bReadLine, int lTimeOut);

TANGOAPI int TANGOCALL LSX_GetVersionStrDet (int lLSID, char *pcVersDet, int lMaxLen);

TANGOAPI int TANGOCALL LSX_FlushBuffer (int lLSID, int lAValue);

TANGOAPI int TANGOCALL LSX_GetDimensions (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_GetPitch (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetGear (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetAccel (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetMotorCurrent (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetReduction (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetCurrentDelay (int lLSID, int *plX, int *plY, int *plZ, int *plR);

TANGOAPI int TANGOCALL LSX_GetActiveAxes (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetAxisDirection (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_GetCalibOffset (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_GetCalibrateDir (int lLSID, int *plXD, int *plYD, int *plZD, int *plAD);

TANGOAPI int TANGOCALL LSX_SetCalibBackSpeed (int lLSID, int lSpeed);

TANGOAPI int TANGOCALL LSX_GetCalibBackSpeed (int lLSID, int *plSpeed);

TANGOAPI int TANGOCALL LSX_SetPowerAmplifier (int lLSID, BOOL bAmplifier);

TANGOAPI int TANGOCALL LSX_GetPowerAmplifier (int lLSID, BOOL *pbAmplifier);

TANGOAPI int TANGOCALL LSX_GetVersionStrInfo (int lLSID, char *pcVersInfo, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetStatusLimit (int lLSID, char *pcLimit, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetMotorSteps (int lLSID, int lX, int lY, int lZ, int lR);

TANGOAPI int TANGOCALL LSX_GetMotorSteps (int lLSID, int *lX, int *lY, int *lZ, int *lR);

TANGOAPI int TANGOCALL LSX_SetAccelFunc (int lLSID, int lX, int lY, int lZ, int lR);

TANGOAPI int TANGOCALL LSX_GetAccelFunc (int lLSID, int *lX, int *lY, int *lZ, int *lR);