Tango/DLL Examples/Java/Tango_Example/src/components/TANGODLL.java

/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

/**
 *
 * @author FD
 * This Java interface adapts to either 32 or 64 bit native Tango DLL
 * matching DLL (32 or 64) depends on target operating system
 * Please find detailed documentation in
 * Tango DLL reference manual
 * and Tango instruction set manual
 */

package components;

import com.sun.jna.*;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.DoubleByReference;

public interface TANGODLL extends Library { 

    /**
     *
     * @param lLSID
     * @param lAnInterfaceType
     * @param pcAComName
     * @param lABaudRate
     * @param bAShowProt
     * @return
     */
    public int LSX_ConnectSimple (int lLSID,int lAnInterfaceType,String pcAComName,int lABaudRate,boolean bAShowProt);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_CreateLSID (IntByReference lLSID);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_Disconnect (int lLSID);

    /**
     *
     * @param lLSID
     * @param bAValue
     * @return
     */
    public int LSX_EnableCommandRetry (int lLSID, boolean bAValue);

    /**
     *
     * @param lLSID
     * @param iAValue
     * @return
     */
    public int LSX_FlushBuffer (int lLSID, int iAValue);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_FreeLSID (int lLSID);

    /**
     *
     * @param lLSID
     * @param pcStr
     * @param pcRet
     * @param lMaxLen
     * @param bReadLine
     * @param lTimeOut
     * @return
     */
    public int LSX_SendString (int lLSID,Pointer pcStr, Pointer pcRet, int lMaxLen, boolean bReadLine, int lTimeOut);

    /**
     *
     * @param lLSID
     * @param pcStr
     * @param pcRet
     * @param lMaxLen
     * @param bReadLine
     * @param lTimeOut
     * @return
     */
    public int LSX_SendStringPosCmd (int lLSID, Pointer pcStr, Pointer pcRet, int lMaxLen, boolean bReadLine, int lTimeOut);

    /**
     *
     * @param lLSID
     * @return
     */
    public int LSX_SetAbortFlag (int lLSID);

    /**
     *
     * @param lLSID
     * @param bShowProt
     * @return
     */
    public int LSX_SetShowProt (int lLSID, boolean bShowProt);

    /**
     *
     * @param lLSID
     * @param pcSerialNr
     * @param lMaxLen
     * @return
     */
    public int LSX_GetSerialNr (int lLSID, Pointer pcSerialNr, int lMaxLen);

    /**
     *
     * @param lLSID
     * @param pcVers
     * @param lMaxLen
     * @return
     */
    public int LSX_GetVersionStr (int lLSID, Pointer pcVers, int lMaxLen);

    /**
     *
     * @param lLSID
     * @param pcVersDet
     * @param lMaxLen
     * @return
     */
    public int LSX_GetVersionStrDet (int lLSID, Pointer pcVersDet, int lMaxLen);

    /**
     *
     * @param lLSID
     * @param pcVersInfo
     * @param lMaxLen
     * @return
     */
    public int LSX_GetVersionStrInfo (int lLSID, Pointer pcVersInfo, int lMaxLen);

    /**
     *
     * @param lLSID
     * @param plErrorCode
     * @return
     */
    public int LSX_GetError (int lLSID, IntByReference plErrorCode);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetPos (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @param bEncoder
     * @return
     */
    public int LSX_GetPosEx (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA, boolean bEncoder);

    /**
     *
     * @param lLSID
     * @param lAxis
     * @param pdPos
     * @return
     */
    public int LSX_GetPosSingleAxis (int lLSID, int lAxis, DoubleByReference pdPos);

    /**
     *
     * @param lLSID
     * @param pcStat
     * @param lMaxLen
     * @return
     */
    public int LSX_GetStatus (int lLSID, Pointer pcStat, int lMaxLen);

    /**
     *
     * @param lLSID
     * @param pcStatusAxisStr
     * @param lMaxLen
     * @return
     */
    public int LSX_GetStatusAxis (int lLSID, Pointer pcStatusAxisStr, int lMaxLen);

    /**
     *
     * @param lLSID
     * @param pcLimit
     * @param lMaxLen
     * @return
     */
    public int LSX_GetStatusLimit (int lLSID, Pointer pcLimit, int lMaxLen);

    /**
     *
     * @param lLSID
     * @param lValue
     * @return
     */
    public int LSX_SetAutoStatus (int lLSID, int lValue);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetAccel (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetAccel (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param plFlags
     * @return
     */
    public int LSX_GetActiveAxes (int lLSID, IntByReference plFlags);

    /**
     *
     * @param lLSID
     * @param lX
     * @param lY
     * @param lZ
     * @param lR
     * @return
     */
    public int LSX_GetAccelFunc (int lLSID, IntByReference lX, IntByReference lY, IntByReference lZ, IntByReference lR);

    /**
     *
     * @param lLSID
     * @param lX
     * @param lY
     * @param lZ
     * @param lR
     * @return
     */
    public int LSX_SetAccelFunc (int lLSID, int lX, int lY, int lZ, int lR);

    /**
     *
     * @param lLSID
     * @param lFlags
     * @return
     */
    public int LSX_SetActiveAxes (int lLSID, int lFlags);

    /**
     *
     * @param lLSID
     * @param plXD
     * @param plYD
     * @param plZD
     * @param plAD
     * @return
     */
    public int LSX_GetAxisDirection (int lLSID, IntByReference plXD, IntByReference plYD, IntByReference plZD, IntByReference plAD);

    /**
     *
     * @param lLSID
     * @param lXD
     * @param lYD
     * @param lZD
     * @param lAD
     * @return
     */
    public int LSX_SetAxisDirection (int lLSID, int lXD, int lYD, int lZD, int lAD);

    /**
     *
     * @param lLSID
     * @param plSpeed
     * @return
     */
    public int LSX_GetCalibBackSpeed (int lLSID, IntByReference plSpeed);

    /**
     *
     * @param lLSID
     * @param lSpeed
     * @return
     */
    public int LSX_SetCalibBackSpeed (int lLSID, int lSpeed);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetCalibOffset (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetCalibOffset (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param plXD
     * @param plYD
     * @param plZD
     * @param plAD
     * @return
     */
    public int LSX_GetCalibrateDir (int lLSID, IntByReference plXD, IntByReference plYD, IntByReference plZD, IntByReference plAD);

    /**
     *
     * @param lLSID
     * @param lXD
     * @param lYD
     * @param lZD
     * @param lAD
     * @return
     */
    public int LSX_SetCalibrateDir (int lLSID, int lXD, int lYD, int lZD, int lAD);

    /**
     *
     * @param lLSID
     * @param plX
     * @param plY
     * @param plZ
     * @param plA
     * @return
     */
    public int LSX_GetCurrentDelay (int lLSID, IntByReference plX, IntByReference plY, IntByReference plZ, IntByReference plA);

    /**
     *
     * @param lLSID
     * @param lX
     * @param lY
     * @param lZ
     * @param lA
     * @return
     */
    public int LSX_SetCurrentDelay (int lLSID, int lX, int lY, int lZ, int lA);

    /**
     *
     * @param lLSID
     * @param plXD
     * @param plYD
     * @param plZD
     * @param plAD
     * @return
     */
    public int LSX_GetDimensions (int lLSID, IntByReference plXD, IntByReference plYD, IntByReference plZD, IntByReference plAD);

    /**
     *
     * @param lLSID
     * @param lXD
     * @param lYD
     * @param lZD
     * @param lAD
     * @return
     */
    public int LSX_SetDimensions (int lLSID, int lXD, int lYD, int lZD, int lAD);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetGear (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetGear (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetMotorCurrent (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetMotorCurrent (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param lX
     * @param lY
     * @param lZ
     * @param lA
     * @return
     */
    public int LSX_GetMotorSteps (int lLSID, IntByReference lX, IntByReference lY, IntByReference lZ, IntByReference lA);

    /**
     *
     * @param lLSID
     * @param lX
     * @param lY
     * @param lZ
     * @param lA
     * @return
     */
    public int LSX_SetMotorSteps (int lLSID, int lX, int lY, int lZ, int lA);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetPitch (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetPitch (int lLSID, double dX, double dY, double dZ, double dA);

    /**
     *
     * @param lLSID
     * @param pbAmplifier
     * @return
     */
    public int LSX_GetPowerAmplifier (int lLSID, IntByReference pbAmplifier);

    /**
     *
     * @param lLSID
     * @param bAmplifier
     * @return
     */
    public int LSX_SetPowerAmplifier (int lLSID, boolean bAmplifier);

    /**
     *
     * @param lLSID
     * @param pdX
     * @param pdY
     * @param pdZ
     * @param pdA
     * @return
     */
    public int LSX_GetReduction (int lLSID, DoubleByReference pdX, DoubleByReference pdY, DoubleByReference pdZ, DoubleByReference pdA);

    /**
     *
     * @param lLSID
     * @param dX
     * @param dY
     * @param dZ
     * @param dA
     * @return
     */
    public int LSX_SetReduction (int lLSID, double dX, double dY, double dZ, double dA);
